# Agent-Indicator

./: .gitignore  README.en.md  README.md
Demo/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Demo/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_state.c  app_state.h  board.h  idf_component.yml  notify.c  notify.h
Demo/main/audio/: audio.cpp  audio.h
Demo/main/bus/: i2c_bus.cpp  i2c_bus.h
Demo/main/cases/: case_i2c.cpp
Demo/main/comm/: comm.h  comm_twai.c  comm_usb.c
Demo/main/console/: app_console.cpp  app_console.h
Demo/main/drivers/: qmi8658.cpp  qmi8658.hpp  sensors.cpp  wm8960.cpp  wm8960.h
Demo/main/power/: power.c  power.h
Demo/main/proto/: proto.h
Demo/main/storage/: storage.cpp  storage.h
Demo/main/ui/: display.c  led_engine.c  led_engine.h
Demo/main/ui/screens/: screen_light.c  screen_music.c  screen_wifi.c  screens.c
RgbBridge/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
RgbBridge/main/: CMakeLists.txt  app_main.c  board.h  idf_component.yml  link_spi.c  link_spi.h  patterns.c  patterns.h  rgb_panel.c  rgb_panel.h
RgbBridgeHost/: CMakeLists.txt  sdkconfig.defaults
RgbBridgeHost/main/: CMakeLists.txt  app_main.c  board.h  rgb_bridge_host.c  rgb_bridge_host.h
docs/: 01-system-design.md  02-power-design.md  03-industrial-design.md  04-schematic-partition.md  05-ui-design.md  06-rgb-bridge.md
docs/en/: 01-system-design.md  02-power-design.md  03-industrial-design.md  04-schematic-partition.md  05-ui-design.md  06-rgb-bridge.md
firmware/: CMakeLists.txt  README.en.md  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_state.c  board.h  idf_component.yml
firmware/main/audio/: audio.cpp  audio.h
firmware/main/bus/: i2c_bus.cpp  i2c_bus.h
firmware/main/cases/: case_can.cpp  case_imu.cpp
firmware/main/comm/: comm.h  comm_twai.c  comm_wifi.c
firmware/main/console/: app_console.cpp  app_console.h
firmware/main/drivers/: qmi8658.cpp  sensors.cpp  sensors.h  wm8960.cpp  wm8960.h
firmware/main/power/: power.c
firmware/main/proto/: proto.c
firmware/main/storage/: storage.cpp
firmware/main/ui/: display.c  display.h  i18n.c  i18n.h  led_engine.c  (+1 more)
hardware/3d/: console.scad  console.stl  halo.scad  halo.stl  orb.scad  soundbar.scad  tiles.scad
host/: README.en.md  README.md  pyproject.toml
host/agentind/: __init__.py  cli.py  protocol.py
host/agentind/sources/: __init__.py  base.py  claude_code.py  demo.py
host/agentind/transports/: __init__.py  base.py  can.py  usb.py  ws.py
tools/ui_sim/: CMakeLists.txt  lv_conf.h  main.c
tools/ui_sim/build-dbg/: CMakeCache.txt  Makefile  cmake_install.cmake  ui_sim
tools/ui_sim/build-dbg/lvgl_build/: Makefile  cmake_install.cmake
(+8 files in other folders)
