[project]
name = "agentind"
version = "0.1.0"
description = "Agent Indicator host bridge: forwards LLM status to the ESP32-S3 desk gadget"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "zeroconf>=0.131",
]

[project.optional-dependencies]
can = ["python-can>=4.3"]
usb = ["pyusb>=1.2"]
all = ["python-can>=4.3", "pyusb>=1.2"]

[project.scripts]
agentind = "agentind.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentind*"]
